--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "next": "15.1.3",
+    "next": "^15.1.4",
     "nodemailer": "^6.9.16",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
