changes to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,14 @@
 {
+	"version": 2,
+	"builds": [
+		{
+			"src": "api/**/*.js",
+			"use": "@vercel/node"
+		}
+	],
 	"functions": {
 		"api/**/*.js": {
 			"runtime": "nodejs20.x"
 		}
-	},
-	"rewrites": [
-		{
-			"source": "/(.*)",
-			"destination": "/api/$1"
-		}
-	]
+	}
 }
